--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,9 +35,10 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <!-- Apparently, a few devices require this.... (not only to make android.media.audiofx.PresetReverb work, but to control volume and other settings)  -->
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <!-- These three permissions are not classified as PROTECTION_NORMAL in Android M API 23
-     http://developer.android.com/preview/features/runtime-permissions.html -->
+     https://developer.android.com/guide/topics/security/permissions.html#normal-dangerous -->
     <!-- For the immersive visualizer -->
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- http://developer.android.com/reference/android/Manifest.permission.html#READ_EXTERNAL_STORAGE -->
