--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,6 +98,8 @@
         <meta-data android:name="com.sec.android.multiwindow.DEFAULT_SIZE_H" android:value="320dp" />
         <meta-data android:name="com.sec.android.multiwindow.MINIMUM_SIZE_W" android:value="320dp" />
         <meta-data android:name="com.sec.android.multiwindow.MINIMUM_SIZE_H" android:value="320dp" />
+        <!-- https://developer.android.com/guide/practices/screens_support.html#MaxAspectRatio -->
+        <meta-data android:name="android.max_aspect" android:value="100.0" />
 
         <activity
             android:name="br.com.carlosrafaelgn.fplay.activity.ActivityHost"
