--- a/build.gradle
+++ b/build.gradle
@@ -85,5 +85,6 @@ android {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: '*.jar')
+	compile fileTree(include: '*.jar', dir: 'libs')
+	compile project(':fplayplugin')
 }
