Imlementing the first plugin

--- a/build.gradle
+++ b/build.gradle
@@ -86,5 +86,5 @@ android {
 
 dependencies {
 	compile fileTree(include: '*.jar', dir: 'libs')
-	compile project(':fplayplugin')
+	compile project(':fplay.plugin')
 }
