--- a/fplay.plugin.wirelessvisualizer/build.gradle
+++ b/fplay.plugin.wirelessvisualizer/build.gradle
@@ -8,18 +8,16 @@ android {
 		applicationId "br.com.carlosrafaelgn.fplay.plugin.wirelessvisualizer"
 		minSdkVersion 10
 		targetSdkVersion 26
-		versionCode 1
-		versionName "1.0"
 	}
 	buildTypes {
 		release {
-			minifyEnabled false
-			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+			minifyEnabled true
+			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
+	compile fileTree(include: ['*.jar'], dir: 'libs')
 	provided project(':fplay.plugin')
 }
