Adjusting requirements for Google Play publication

--- a/fplay.plugin.wirelessvisualizer/src/main/AndroidManifest.xml
+++ b/fplay.plugin.wirelessvisualizer/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
     <uses-feature
         android:name="android.hardware.faketouch"
         android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false"/>
 
     <application
         android:allowBackup="true"
