--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -77,6 +77,9 @@
     <uses-feature
         android:name="android.software.leanback"
         android:required="false" />
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false" />
 
     <!-- http://developer.android.com/intl/pt-br/reference/android/app/backup/BackupManager.html -->
     <application
