Starting to create a new plugin: Http Transmitter

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':fplay.plugin', ':fplay.plugin.wirelessvisualizer'
+include ':fplay.plugin', ':fplay.plugin.wirelessvisualizer', ':fplay.plugin.httptransmitter'
