--- a/fplay.plugin.httptransmitter/src/main/AndroidManifest.xml
+++ b/fplay.plugin.httptransmitter/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest package="br.com.carlosrafaelgn.fplay.plugin.wirelessvisualizer"
+<?xml version="1.0" encoding="utf-8"?>
+<manifest package="br.com.carlosrafaelgn.fplay.plugin.httptransmitter"
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:installLocation="auto"
           android:versionCode="1"
@@ -21,19 +22,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <!--
-    Just to make Google Play show the App even to phones without Bluetooth,
-    despite the uses-permission above!
-    -->
-    <uses-feature
-        android:name="android.hardware.bluetooth"
-        android:required="false"/>
-    <!--
     Support for devices without touch, devices without microphone and TVs
     as described in http://developer.android.com/guide/topics/manifest/uses-feature-element.html
     -->
-    <uses-feature
-        android:name="android.hardware.microphone"
-        android:required="false"/>
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false"/>
@@ -57,7 +48,7 @@
         android:supportsRtl="true">
 
         <activity
-            android:name="br.com.carlosrafaelgn.fplay.plugin.wirelessvisualizer.ActivityMain"
+            android:name="br.com.carlosrafaelgn.fplay.plugin.httptransmitter.ActivityMain"
             android:clearTaskOnLaunch="true"
             android:label="@string/app_name"
             android:launchMode="singleTask"
