--- a/fplay.plugin.httptransmitter/src/main/AndroidManifest.xml
+++ b/fplay.plugin.httptransmitter/src/main/AndroidManifest.xml
@@ -13,16 +13,8 @@
         android:smallScreens="true"
         android:xlargeScreens="true"/>
 
-    <!-- For Google Drive -->
-    <!-- uses-permission android:name="android.permission.GET_ACCOUNTS" -->
-    <!-- For http playback -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <!-- To check the connection state -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-
     <!--
-    Support for devices without touch, devices without microphone and TVs
+    Support for devices without touch and TVs
     as described in http://developer.android.com/guide/topics/manifest/uses-feature-element.html
     -->
     <uses-feature
@@ -30,9 +22,6 @@
         android:required="false"/>
     <uses-feature
         android:name="android.hardware.faketouch"
-        android:required="false"/>
-    <uses-feature
-        android:name="android.hardware.wifi"
         android:required="false"/>
 
     <application
