--- a/build.gradle
+++ b/build.gradle
@@ -89,5 +89,6 @@ android {
 
 dependencies {
 	compile fileTree(include: '*.jar', dir: 'libs')
+	compile 'com.google.code.gson:gson:2.8.2'
 	compile project(':fplay.plugin')
 }
