--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -128,6 +128,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
             </intent-filter>
+
+            <!-- Handling fplay:// links -->
+            <!--
+                I gave up on the idea because most apps don't render fplay://XXXXXXXX as a link,
+                except for browsers, with tags like <a href="fplay://XXXXXXXX">
+            -->
+            <!--<intent-filter
+                android:icon="@mipmap/ic_launcher"
+                android:label="@string/app_name">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="fplay" android:host="*" />
+            </intent-filter>-->
+
             <!-- External file support
              http://developer.android.com/guide/components/intents-filters.html
              http://developer.android.com/guide/topics/manifest/data-element.html
