--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.carlosrafaelgn.fplay"
-    android:installLocation="auto"
-    android:versionCode="107"
-    android:versionName="1.73" >
-
-    <!-- versionCode must be kept in sync with UI.VERSION_CODE -->
-    <!-- versionName must be kept in sync with UI.VERSION_NAME -->
+    android:installLocation="auto" >
+    <!-- In favor of gradle -->
+    <!-- android:versionCode="107"
+    android:versionName="1.73" > -->
 
     <!-- In favor of gradle -->
 	<!-- <uses-sdk
