--- a/fplay.plugin.httptransmitter/build.gradle
+++ b/fplay.plugin.httptransmitter/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-	compileSdkVersion 26
-	buildToolsVersion "20.0.0"
+	compileSdkVersion 28
+	buildToolsVersion "28.0.2"
 
 	defaultConfig {
 		applicationId "br.com.carlosrafaelgn.fplay.plugin.httptransmitter"
 		minSdkVersion 10
-		targetSdkVersion 26
+		targetSdkVersion 28
 	}
 	buildTypes {
 		release {
@@ -18,6 +18,6 @@ android {
 }
 
 dependencies {
-	compile fileTree(include: ['*.jar'], dir: 'libs')
-	provided project(':fplay.plugin')
+	implementation fileTree(include: ['*.jar'], dir: 'libs')
+	compileOnly project(':fplay.plugin')
 }
