Added android:usesCleartextTraffic="true" to the manifest to allow HTTP-only streams to work properly on Android 8/9

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -93,6 +93,7 @@
     <application
         android:allowBackup="true"
         android:allowClearUserData="true"
+        android:usesCleartextTraffic="true"
         android:killAfterRestore="true"
         android:restoreAnyVersion="false"
         android:description="@string/app_description"
