--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,7 +98,7 @@
         android:restoreAnyVersion="false"
         android:description="@string/app_description"
         android:icon="@mipmap/ic_launcher"
-        android:banner="@mipmap/ic_launcher"
+        android:banner="@drawable/ic_banner"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="@xml/backup_rules"
