--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,6 +98,7 @@
         android:restoreAnyVersion="false"
         android:description="@string/app_description"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:banner="@drawable/ic_banner"
         android:label="@string/app_name"
         android:supportsRtl="true"
