Making wi-fi optional

--- a/fplay.plugin.wirelessvisualizer/src/main/AndroidManifest.xml
+++ b/fplay.plugin.wirelessvisualizer/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
     <uses-feature
         android:name="android.hardware.faketouch"
         android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false"/>
 
     <application
         android:allowBackup="true"
