--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -90,6 +90,7 @@
         android:required="false" />
 
     <!-- http://developer.android.com/intl/pt-br/reference/android/app/backup/BackupManager.html -->
+    <!-- https://developer.android.com/training/data-storage/compatibility -->
     <application
         android:allowBackup="true"
         android:allowClearUserData="true"
@@ -103,6 +104,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="@xml/backup_rules"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme" >
 
         <!-- http://stackoverflow.com/a/14185426/3569421 -->
