--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -108,6 +108,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="@xml/backup_rules"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme" >
 
         <!-- http://stackoverflow.com/a/14185426/3569421 -->
