Upgrading to Android SDK 35

--- a/app/src/traditional/AndroidManifest.xml
+++ b/app/src/traditional/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.carlosrafaelgn.fplay" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- This permission is not classified as PROTECTION_NORMAL in Android M API 23
      http://developer.android.com/preview/features/runtime-permissions.html -->
