--- a/httptransmitter/src/main/AndroidManifest.xml
+++ b/httptransmitter/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="br.com.carlosrafaelgn.fplay.plugin.httptransmitter"
-          xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
           android:installLocation="auto"
           android:versionCode="2"
           android:versionName="1.01">
