--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
     <!-- For Android 28 https://developer.android.com/about/versions/pie/android-9.0-migration#tya -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+    <!-- For Android 34 -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+
     <!--
     Just to make Google Play show the App even to phones without Bluetooth,
     despite the uses-permission above!
@@ -275,6 +278,7 @@
             android:enabled="true"
             android:exported="false"
             android:label="Player"
+            android:foregroundServiceType="mediaPlayback"
             android:stopWithTask="false" />
 
         <receiver
